[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/blue_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes_and_scripts/screen__login/login.gd" type="Script" id=2]
[ext_resource path="res://scenes_and_scripts/gl_obj__go_to_main_menu_btn/back_to_menu_button.tscn" type="PackedScene" id=3]

[node name="Login" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 29.0
margin_top = 149.0
margin_right = 331.0
margin_bottom = 491.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_right = 302.0
margin_bottom = 342.0
custom_constants/separation = 80

[node name="MarginContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer2"]
margin_right = 302.0
margin_bottom = 232.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/MarginContainer"]
margin_right = 302.0
margin_bottom = 232.0
theme = ExtResource( 1 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameHContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_right = 302.0
margin_bottom = 34.0

[node name="UserNameLabel" type="Label" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/UserNameHContainer"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 29.0
text = "UserName"

[node name="UserNameText" type="LineEdit" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/UserNameHContainer"]
margin_left = 102.0
margin_right = 302.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Insert Your Name Here"
placeholder_alpha = 0.388
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordHContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 302.0
margin_bottom = 88.0

[node name="PasswordLabel" type="Label" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/PasswordHContainer"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 29.0
text = "PassWord"

[node name="PasswordText" type="LineEdit" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/PasswordHContainer"]
margin_left = 93.0
margin_right = 302.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Insert Your Password Here"
placeholder_alpha = 0.388
caret_blink = true
caret_blink_speed = 0.5

[node name="NotificationLabel" type="Label" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 302.0
margin_bottom = 132.0

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 302.0
margin_bottom = 182.0
text = "LOGIN"

[node name="GoToRegisterButton" type="Button" parent="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 302.0
margin_bottom = 232.0
text = "Create New User"

[node name="Button" parent="CenterContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_top = 312.0
margin_right = 302.0
margin_bottom = 342.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/MarginContainer/VBoxContainer/GoToRegisterButton" to="." method="_on_GoToRegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
